--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "express": "~3.3.4",
     "ejs": "0.8.x",
     "cloudinary": "~1.0.3",
-    "underscore": "~1.5.1"
+    "underscore": "~1.5.1",
+    "mongodb": "~1.3.15",
+    "phantomjs": "~1.9.2-2"
   },
   "engines": {
     "node": "0.8.x",
